Background now correctly covers display.

--- a/styles.scss
+++ b/styles.scss
@@ -27,5 +27,7 @@ body {
     body {
         margin-bottom: 0;
         background: url(images/bg-pattern-desktop.svg) no-repeat;
+        background-position: bottom left;
+        background-size: cover;
     }
 }
